--- a/public/movie-ranking.html
+++ b/public/movie-ranking.html
@@ -14,6 +14,6 @@
         I love Ryan Reynolds and Sandra Bullock together.</p>
 
         <h3>Alice in wonderland</h3>
-        <img src="Images/aliceinwonderland.webp" alt="Aliceinwonderland" width="100" height="150" />
+        <img src="Images/aliceinwonderland.jpg" alt="Aliceinwonderland" width="100" height="150" />
         <p>This is my favorite animated movie,<br /> 
         it's very weird and original.</p>
